// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CYFLink Component renders external links correctly 1`] = `
<div
  className="section-bottom-link"
>
  <a
    className="big-link-3 btn"
    href="https://codeyourfuture.io"
    rel="noopener noreferrer"
    target="_blank"
  >
    Homepage
  </a>
</div>
`;

exports[`CYFLink Component renders internal links correctly 1`] = `
<div
  className="section-bottom-link"
>
  <Link
    className="big-link-3 btn"
    rel="noopener noreferrer"
    replace={false}
    target="_blank"
    to="/apply/mentor"
  >
    Become a Mentor
  </Link>
</div>
`;
